# PII-Filtering

./: .env  README.md  docker-compose.yaml  filter-pii-service-dockerfile  perform-ocr-service-dockerfile  pyproject.toml
data/metadata/: invoice.json
pii_challenge/: docker-compose.yaml  send_image_data.py  submit_image_data.py
pii_challenge/filter-service/: filter_to_pii.py
pii_challenge/models/: models.py
pii_challenge/perform-ocr-service/: perform_ocr.py
pii_challenge/perform-ocr-service/models/: models.py
tests/: test_integration.py
