[tool.poetry]
name = "pii-challenge"
version = "0.1.0"
description = ""
authors = ["Tolga <tolga.karahan@hypatos.ai>"]
readme = "README.md"
packages = [{include = "pii_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
