[tool.poetry]
name = "pii-challenge"
version = "0.1.0"
description = ""
authors = ["Tolga <tolga.karahan@hypatos.ai>"]
readme = "README.md"
packages = [{include = "pii_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"
pytesseract = "^0.3.13"
python-dotenv = "^1.0.1"
docker = "^7.1.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
